compiler/testData/diagnostics/tests/inference/regressions/noRecursionOnCallingPureKotlinFunctionAsSyntheticJavaAccessor.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
class B {
    fun getA() = <!UNRESOLVED_REFERENCE!>a<!>
}